--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/android": "6.1.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/browser": "^6.0.1",
+    "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.1.0",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
@@ -32,6 +33,7 @@
     "@ionic/angular": "^8.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "ionicons": "^7.0.0",
+    "ng-otp-input": "^1.9.3",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.4",
     "tslib": "^2.3.0",
